--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -72,3 +72,7 @@
 body {
     font-family: "Source Sans Pro", "Pretendard", "Microsoft Yahei", sans-serif;
 }
+
+#search-results a, h5, h4, h3, h2, h1 {
+    font-family: "Lato", "Pretendard", "Microsoft Yahei", sans-serif;
+}
