--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -104,11 +104,9 @@ tail_includes:
     ins1.className = 'adsbygoogle';
 
     if (width < 850) {
-      ins1.setAttribute('style', 'width: 100%; display: block; margin-top: 1rem;');
+      ins1.setAttribute('style', 'display: inline-block; width: 300px; height: 100px; margin-top: 1rem;');
       ins1.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
       ins1.setAttribute('data-ad-slot', '1570491486');
-      ins1.setAttribute('data-ad-format', 'auto');
-      ins1.setAttribute('data-full-width-responsive', 'true');
     } else {
       ins1.setAttribute('style', 'display: inline-block; width: 728px; height: 90px; margin-top: 1rem;');
       ins1.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
@@ -132,11 +130,9 @@ tail_includes:
     ins2.className = 'adsbygoogle';
 
     if (width < 850) {
-      ins2.setAttribute('style', 'width: 100%; display: block; margin-top: 1rem;');
+      ins2.setAttribute('style', 'display: inline-block; width: 300px; height: 100px; margin-top: 1rem;');
       ins2.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
       ins2.setAttribute('data-ad-slot', '1570491486');
-      ins2.setAttribute('data-ad-format', 'auto');
-      ins2.setAttribute('data-full-width-responsive', 'true');
     } else {
       ins2.setAttribute('style', 'display: inline-block; width: 728px; height: 90px; margin-top: 1rem;');
       ins2.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
