포스트 업데이트

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -96,24 +96,15 @@ tail_includes:
   </header>
 
   <!-- Google Adsense -->
-  <div id="adsense_top_banner" style="width: 100%; display: flex; justify-content: center;"></div>
-  <script>
-    const width = window.innerWidth;
-    const banner1 = document.getElementById("adsense_top_banner");
-    const ins1 = document.createElement("ins");
-    ins1.className = 'adsbygoogle';
-
-    if (width < 850) {
-      ins1.setAttribute('style', 'display: inline-block; width: 300px; height: 100px; margin-top: 1rem;');
-      ins1.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
-      ins1.setAttribute('data-ad-slot', '1570491486');
-    } else {
-      ins1.setAttribute('style', 'display: inline-block; width: 728px; height: 90px; margin-top: 1rem;');
-      ins1.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
-      ins1.setAttribute('data-ad-slot', '9627771449');
-    }
-    banner1.appendChild(ins1);
-  </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7819549426971576" crossorigin="anonymous"></script>
+  <ins
+    class="adsbygoogle"
+    style="display: block; width: 100%; margin-top: 1rem;"
+    data-ad-client="ca-pub-7819549426971576"
+    data-ad-slot="9627771449"
+    data-ad-format="auto"
+    data-full-width-responsive="true"
+  ></ins>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
@@ -123,23 +114,14 @@ tail_includes:
   </div>
 
   <!-- Google Adsense -->
-  <div id="adsense_bottom_banner" style="width: 100%; display: flex; justify-content: center;"></div>
-  <script>
-    const banner2 = document.getElementById("adsense_bottom_banner");
-    const ins2 = document.createElement("ins");
-    ins2.className = 'adsbygoogle';
-
-    if (width < 850) {
-      ins2.setAttribute('style', 'display: inline-block; width: 300px; height: 100px; margin-top: 1rem;');
-      ins2.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
-      ins2.setAttribute('data-ad-slot', '1570491486');
-    } else {
-      ins2.setAttribute('style', 'display: inline-block; width: 728px; height: 90px; margin-top: 1rem;');
-      ins2.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
-      ins2.setAttribute('data-ad-slot', '9627771449');
-    }
-    banner2.appendChild(ins2);
-  </script>
+  <ins
+    class="adsbygoogle"
+    style="display: block; width: 100%; margin-top: 1rem;"
+    data-ad-client="ca-pub-7819549426971576"
+    data-ad-slot="9627771449"
+    data-ad-format="auto"
+    data-full-width-responsive="true"
+  ></ins>
   <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
