adsbygoogle.js 위치 변경

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -111,4 +111,7 @@
 
   <!-- Naver site verification -->
   <meta name="naver-site-verification" content="d80d3af1993959d27df72907efda1ccf901d159e"/>
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7819549426971576" crossorigin="anonymous"></script>
 </head>
