--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -96,14 +96,21 @@ tail_includes:
   </header>
 
   <!-- Google Adsense -->
-  <ins
-    class="adsbygoogle"
-    style="display: block; width: 100%; margin-top: 1rem;"
-    data-ad-client="ca-pub-7819549426971576"
-    data-ad-slot="9627771449"
-    data-ad-format="auto"
-    data-full-width-responsive="true"
-  ></ins>
+  <div id="adsense_top_banner" style="width: 100%; display: flex; justify-content: center;"></div>
+  <script>
+    const width = window.innerWidth;
+    const banner1 = document.getElementById("adsense_top_banner");
+    const ins1 = document.createElement("ins");
+
+    ins1.className = 'adsbygoogle';
+    ins1.setAttribute('style', 'width: 100%; display: block; margin-top: 1rem;');
+    ins1.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
+    ins1.setAttribute('data-ad-slot', '9627771449');
+    ins1.setAttribute('data-ad-format', 'auto');
+    ins1.setAttribute('data-full-width-responsive', 'true');
+
+    banner1.appendChild(ins1);
+  </script>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
@@ -113,14 +120,20 @@ tail_includes:
   </div>
 
   <!-- Google Adsense -->
-  <ins
-    class="adsbygoogle"
-    style="display: block; width: 100%; margin-top: 1rem;"
-    data-ad-client="ca-pub-7819549426971576"
-    data-ad-slot="9627771449"
-    data-ad-format="auto"
-    data-full-width-responsive="true"
-  ></ins>
+  <div id="adsense_bottom_banner" style="width: 100%; display: flex; justify-content: center;"></div>
+  <script>
+    const banner2 = document.getElementById("adsense_bottom_banner");
+    const ins2 = document.createElement("ins");
+
+    ins2.className = 'adsbygoogle';
+    ins2.setAttribute('style', 'width: 100%; display: block; margin-top: 1rem;');
+    ins2.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
+    ins2.setAttribute('data-ad-slot', '9627771449');
+    ins2.setAttribute('data-ad-format', 'auto');
+    ins2.setAttribute('data-full-width-responsive', 'true');
+
+    banner2.appendChild(ins2);
+  </script>
   <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
