배너 static으로 변경

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -96,21 +96,16 @@ tail_includes:
   </header>
 
   <!-- Google Adsense -->
-  <div id="adsense_top_banner" style="width: 100%; display: flex; justify-content: center;"></div>
-  <script>
-    const width = window.innerWidth;
-    const banner1 = document.getElementById("adsense_top_banner");
-    const ins1 = document.createElement("ins");
-
-    ins1.className = 'adsbygoogle';
-    ins1.setAttribute('style', 'width: 100%; display: block; margin-top: 1rem;');
-    ins1.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
-    ins1.setAttribute('data-ad-slot', '9627771449');
-    ins1.setAttribute('data-ad-format', 'auto');
-    ins1.setAttribute('data-full-width-responsive', 'true');
-
-    banner1.appendChild(ins1);
-  </script>
+  <div id="adsense_top_banner" style="width: 100%; display: flex; justify-content: center;">
+    <ins
+      class="adsbygoogle"
+      style="width: 100%; display: block; margin-top: 1rem;"
+      data-ad-client="ca-pub-7819549426971576"
+      data-ad-slot="9627771449"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+  </div>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
@@ -120,20 +115,16 @@ tail_includes:
   </div>
 
   <!-- Google Adsense -->
-  <div id="adsense_bottom_banner" style="width: 100%; display: flex; justify-content: center;"></div>
-  <script>
-    const banner2 = document.getElementById("adsense_bottom_banner");
-    const ins2 = document.createElement("ins");
-
-    ins2.className = 'adsbygoogle';
-    ins2.setAttribute('style', 'width: 100%; display: block; margin-top: 1rem;');
-    ins2.setAttribute('data-ad-client', 'ca-pub-7819549426971576');
-    ins2.setAttribute('data-ad-slot', '9627771449');
-    ins2.setAttribute('data-ad-format', 'auto');
-    ins2.setAttribute('data-full-width-responsive', 'true');
-
-    banner2.appendChild(ins2);
-  </script>
+  <div id="adsense_bottom_banner" style="width: 100%; display: flex; justify-content: center;">
+    <ins
+      class="adsbygoogle"
+      style="width: 100%; display: block; margin-top: 1rem;"
+      data-ad-client="ca-pub-7819549426971576"
+      data-ad-slot="9627771449"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+  </div>
   <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
