--- a/_includes/head.html
+++ b/_includes/head.html
@@ -113,5 +113,5 @@
   <meta name="naver-site-verification" content="d80d3af1993959d27df72907efda1ccf901d159e"/>
 
   <!-- Google AdSense -->
-  <script async src="{{ site.data.origin[type].adsbygoogle.url }}" crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7819549426971576" crossorigin="anonymous"></script>
 </head>
