--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,7 +15,7 @@
       <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
     </h1>
     <p class="site-subtitle fst-italic mb-0">{{ site.tagline }}</p>
-    <img style="display: none;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Ftaedonn%2Fblog&count_bg=%2397989C&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=%EB%B0%A9%EB%AC%B8%EC%88%98&edge_flat=false"/>
+    <img style="display: none;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Ftaedonn%2Fblog&count_bg=%2397989C&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=%EB%B0%A9%EB%AC%B8%EC%88%98&edge_flat=false" alt="HITS 뱃지"/>
   </header>
   <!-- .profile-wrapper -->
 
